# LargeScalePDPTW

./: .gitignore  Cargo.toml  README.md
libs/fp_decimal_type/: Cargo.toml  README.md
libs/fp_decimal_type/benches/: bench_num.rs
libs/fp_decimal_type/src/: lib.rs
libs/kdsp/: Cargo.toml
libs/kdsp/resources/test_graphs/: a2-16hetARX.txt  a2-20hetARX.txt  a2-24hetARX.txt  a3-18hetARX.txt  a3-24hetARX.txt  a3-30hetARX.txt  (+6 more)
libs/kdsp/src/: lib.rs  utils.rs
resources/instances/: README.md
resources/instances/nyc/: .gitignore
resources/instances/pdptw/: .gitignore
resources/parameters/: benchmark.args  case-study.args  matching-only.args
resources/solutions/: README.md
resources/solutions/case_study/: .gitignore  README.md
resources/solutions/computational_study/: .gitignore  MATH.7z  README.md
resources/solutions/pdptw/: .gitignore
src/: cli.rs  main.rs
src/ages/: mod.rs
src/clustering/: mod.rs
src/construction/: bin.rs  insertion.rs  kdsp.rs  mod.rs
src/io/: kdsp_writer.rs  li_lim_reader.rs  mod.rs  nyc_reader.rs  sartori_buriol_reader.rs  sintef_solution.rs
src/lns/: absence_counter.rs  acceptance_criterion.rs  fleet_minimization.rs  mod.rs
src/lns/destroy/: absence_removal.rs  adjacent_string_removal.rs  mod.rs  route_removal.rs  worst_removal.rs
src/lns/largescale/: ages.rs  mod.rs
src/lns/repair/: absence_based_regret_insertion.rs  best_insertion.rs  greedy_insertion_with_blinks.rs  hardest_first_insertion.rs  mod.rs  regret_insertion.rs
src/pooling/: matching.rs  mod.rs  preprocess.rs
src/problem/: mod.rs  pdptw.rs  travel_matrix.rs
src/refn/: mod.rs
src/solution/: blocknode.rs  datastructure.rs  description.rs  misc.rs  mod.rs  requestbank.rs
src/solution/balassimonetti/: ls.rs  mod.rs
src/solution/permutation/: exchange.rs  mod.rs  moves.rs  relocate.rs
src/solver/: construction.rs  ls_solver.rs  mod.rs
src/utils/: logging.rs  mod.rs  num.rs  rcl.rs  refn.rs  suurballe.rs  validator.rs
src/utils/relatedness/: counter.rs  mod.rs
src/utils/stats/: mod.rs  search_progress_stats.rs
(+3 files in other folders)
