[package]
name = "ls-pdptw-solver"
version = "0.1.1"
edition = "2021"

[features]
#default = ["progressbar", "parallel", "use-grb"]
classic-pdptw = ["fleet-minimization"]
parallel = ["rayon"]
use-grb = ["grb"]
progressbar = ["pbr"]
timed_solution_logger = []
disable-decomposition = []
progress_tracking_all = ["progress_tracking_ls_ils", "progress_tracking_ls_lns", "progress_tracking_ls_decomposition", "progress_tracking_ls_ages"]
progress_tracking_ls_ils = ["progress_tracking"]
progress_tracking_ls_lns = ["progress_tracking"]
progress_tracking_ls_ages = ["progress_tracking"]
progress_tracking_ls_decomposition = ["progress_tracking"]
progress_tracking = ["chrono"]
move-asserts = [] # enables assertions when applying moves
trace-refdata = [] # adds path information in REF data
fleet-minimization = []
search_assertions = [] # enables assertions regarding solution state during the search
test-with-sartoriburiol-solutions = ["classic-pdptw"]
relatedness-measures=[]

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
fixedbitset = "0.4.1"
num-traits = "0.2.14"
rand = "0.8.4"
rand_pcg = "0.3.1"
ahash = "0.8.3"
clap = { version = "^4.3.2", features = ["derive"] }
argfile = "0.2.1"
proc-macro2 = "1.0.47"
enum-map-derive = "0.6.0"
enum-map = "1.1.1"
took = "0.1.2"
toml = "0.5.9"
log = "0.4.14"
env_logger = "0.9.0"
fp_decimal_type = { path = "libs/fp_decimal_type" }
kdsp = { path = "libs/kdsp" }
grb = { version = "1.3.0", optional = true }
pbr = { version = "1.0.4", optional = true }
rayon = { version = "1.5.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.11"
chrono = { version = "0.4.24", optional = true }
serde_json = "1.0.96"
tinyvec = "1.6.0"
itertools = "0.12.1"
os_str_bytes = "7.1.0"

[profile.release]
# add debug info
#debug = true
# enable link-time-optimization
#lto = true
# reduce codegen-units
#codegen-units = 1
# disable overflow checks
#overflow-checks = false